--- a/docs/notebook/example.ipynb
+++ b/docs/notebook/example.ipynb
@@ -6,14 +6,13 @@
    "source": [
     "## Read data\n",
     "\n",
-    "This tutorial jupyter notebook and the ``sample.npz`` it uses can be found at \n",
-    "<a href=\"https://github.com/timpyrkov/mhealthdata\">mHealthData github repository</a>.\n",
+    "This tutorial jupyter notebook and the ``sample.npz`` it uses can be found at [https://github.com/timpyrkov/mhealthdata/tree/master/docs/notebook](https://github.com/timpyrkov/mhealthdata/tree/master/docs/notebook).\n",
     "\n",
     "Many smartphone health apps have their own data format. \n",
     "\n",
-    "``mHeaalthData`` is a tool to load to pandas Dataframes all basic health data (`steps`, `sleep`, `bpm`, ``rhr``, and `weight`) from different formats (``.csv``, ``.json``, ``.xml`` stored in various sub-folders as well as equispaced or with arbitrary timestamps for start and end). \n",
+    "``mHealthData`` is a tool to load to pandas Dataframes all basic health data (`steps`, `sleep`, `bpm`, ``rhr``, and `weight`) from different formats (``.csv``, ``.json``, ``.xml`` stored in various sub-folders as well as equispaced or with arbitrary timestamps for start and end). \n",
     "\n",
-    "The code cell below is an example. It will only run if you provide a valid ``path`` to a health data export and replace `FitbitLoader()` with `FitbitLoader()` for Samsung Health export or `FitbitLoader()` for Apple Healthkit export."
+    "The code cell below is an example. It will only run if you provide a valid ``path`` to a health data export and replace `FitbitLoader()` with `ShealthLoader()` for Samsung Health export or `HealthkitLoader()` for Apple Healthkit export."
    ]
   },
   {
